# drogon_aws_mobile_otp

./: CMakeLists.txt  README.md  conanfile.txt  config.json
.github/workflows/: deploy.yml
aws_cloud/: aws_auth.cpp  aws_s3.cpp
db_access/: DatabaseManager.cpp
include/: Config.h  DatabaseManager.h  OtpController.h  OtpService.h  aws_auth.h  aws_s3.h
otp/: OtpController.cpp  OtpService.cpp
src/: main.cpp
